[gd_scene load_steps=13 format=2]

[ext_resource path="res://Resources/Styles/HoverButton.tres" type="StyleBox" id=1]
[ext_resource path="res://Resources/Styles/pressedbutton.tres" type="StyleBox" id=2]
[ext_resource path="res://Resources/Styles/panel.tres" type="StyleBox" id=3]
[ext_resource path="res://Resources/Styles/normalbutton.tres" type="StyleBox" id=4]
[ext_resource path="res://Scripts/WeaponSelector.gd" type="Script" id=5]
[ext_resource path="res://Scenes/WeaponController.tscn" type="PackedScene" id=6]
[ext_resource path="res://Resources/Fonts/PixelFont.tres" type="DynamicFont" id=7]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxFlat" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxFlat" id=4]

[sub_resource type="Animation" id=5]
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 2, 7 ), Vector2( 77, 7 ), Vector2( 135, 7 ), Vector2( 135, 40 ), Vector2( 135, 72 ) ]
}

[node name="WeaponSelector" type="Container"]
margin_right = 180.0
margin_bottom = 108.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BtnsContainer" type="HBoxContainer" parent="."]
visible = false
margin_left = 80.0
margin_top = 92.0
margin_right = 128.0
margin_bottom = 104.0
rect_min_size = Vector2( 42, 12 )

[node name="CancelBtn" type="Button" parent="BtnsContainer"]
margin_right = 29.0
margin_bottom = 12.0
rect_min_size = Vector2( 29, 12 )
custom_styles/hover = ExtResource( 1 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = SubResource( 1 )
custom_styles/disabled = SubResource( 2 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.113725, 0.654902, 0.2, 1 )
custom_colors/font_color_hover = Color( 0.113725, 0.654902, 0.2, 1 )
custom_colors/font_color_pressed = Color( 0.113725, 0.654902, 0.2, 1 )
text = "Cancel"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OkBtn" type="Button" parent="BtnsContainer"]
margin_left = 33.0
margin_right = 50.0
margin_bottom = 12.0
rect_min_size = Vector2( 17, 12 )
custom_styles/hover = ExtResource( 1 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.113725, 0.654902, 0.2, 1 )
custom_colors/font_color_hover = Color( 0.113725, 0.654902, 0.2, 1 )
custom_colors/font_color_pressed = Color( 0.113725, 0.654902, 0.2, 1 )
text = "Ok"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DescriptionPanel" type="Panel" parent="."]
margin_left = 147.0
margin_top = 18.0
margin_right = 149.0
margin_bottom = 25.0
rect_scale = Vector2( -1, 1 )
custom_styles/panel = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelAnimation" type="AnimationPlayer" parent="DescriptionPanel"]
anims/PanelAppear = SubResource( 5 )

[node name="WeaponNamePanel" type="Panel" parent="DescriptionPanel"]
visible = false
margin_left = 30.9684
margin_top = -11.7469
margin_right = 105.968
margin_bottom = 0.253094
custom_styles/panel = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WeaponNameLabel" type="Label" parent="DescriptionPanel/WeaponNamePanel"]
margin_left = 72.0
margin_top = 3.0
margin_right = 141.0
margin_bottom = 9.0
rect_scale = Vector2( -1, 1 )
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.113725, 0.654902, 0.2, 1 )
text = "aa"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WeaponDescription" type="RichTextLabel" parent="DescriptionPanel"]
visible = false
margin_left = 132.0
margin_top = 3.0
margin_right = 247.0
margin_bottom = 69.0
rect_scale = Vector2( -1, 1 )
custom_fonts/normal_font = ExtResource( 7 )
custom_colors/default_color = Color( 0.113725, 0.654902, 0.2, 1 )
custom_colors/selection_color = Color( 0.0666667, 0.337255, 0.109804, 0 )
custom_colors/font_color_selected = Color( 0.0666667, 0.337255, 0.109804, 0 )
custom_colors/font_color_shadow = Color( 0.0666667, 0.337255, 0.109804, 0 )
text = "dadaadadasdadsadadsaddaddasdaasadddasdadaddaaddadda"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WeaponController" parent="." instance=ExtResource( 6 )]
[connection signal="pressed" from="BtnsContainer/CancelBtn" to="." method="_on_CancelBtn_pressed"]
[connection signal="pressed" from="BtnsContainer/OkBtn" to="." method="_on_OkBtn_pressed"]
